<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navHome"
            android:title="@string/nav_home"
            />
        <item
            android:id="@+id/navCategory"
            android:title="@string/nav_categories"
            />
        <item
            android:id="@+id/navProfile"
            android:title="@string/nav_profile"
            />
        <item
            android:id="@+id/navPurchases"
            android:title="@string/nav_purchases"
            />
        <item
            android:id="@+id/navSells"
            android:title="@string/nav_sales"
            />
        <item android:title="Sub items">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/navLogout"
                        android:title="@string/nav_logout" />
                    <item
                        android:id="@+id/navAbout"
                        android:title="@string/nav_about" />
                </group>
            </menu>
        </item>
    </group>


</menu>